added copy to body

--- a/default.html
+++ b/default.html
@@ -7,6 +7,9 @@
 				<h1>Git Testing Ground</h1>
 				<h2>Built to test out workflows, etc.</h2>
 			</div>
+			<div class="content">
+				<p>This is the first edit, so I'm making changes in branch "chg1".</p>
+			</div>
 		</div>
 	</body>
 
